# cassette

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cassette-v1-design-brief.md  index.html  package-lock.json  package.json
.claude/: launch.json  settings.local.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/disc/: archiver.rs  detector.rs  mod.rs  state.rs
src-tauri/src/metadata/: mod.rs  tmdb.rs
src-tauri/src/mpv/: controller.rs  mod.rs  render.rs
src-tauri/src/torrents/: manager.rs  mod.rs  state.rs
src-tauri/src/trakt/: mod.rs
src/components/: WindowControls.tsx
src/components/player/: AudioChip.tsx  ProfileChip.tsx  Scrubber.tsx  SkipOverlay.tsx  SubtitleFontPicker.tsx  TransportRow.tsx
src/hooks/: useAutoHide.ts
src/lib/: format.ts  tauri.ts
src/styles/: aurora.css  globals.css
src/types/: library.ts
src/views/: AboutView.tsx  ArchivingView.tsx  EmptyState.tsx  LibraryView.tsx  OnboardingView.tsx  PlayerView.tsx  SettingsView.tsx
