[package]
name = "cassette"
version = "0.1.0"
edition = "2021"

[lib]
name = "cassette_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libmpv2 = { version = "5", features = ["render"] }
# windows-sys is already a transitive dep but we need it directly for Win32 APIs
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
] }
raw-window-handle = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
torrent-name-parser = "0.12"
notify = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "process"] }
tauri-plugin-dialog = "2"
librqbit = { version = "8.1.1", default-features = false, features = ["default-tls"] }
anyhow = "1"
